--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <!--
  *
  * See the NOTICE file distributed with this work for additional
@@ -25,56 +24,21 @@
   <parent>
     <groupId>org.xwiki.commons</groupId>
     <artifactId>xwiki-commons-pom</artifactId>
-    <version>5.4</version>
+    <version>5.4.4</version>
   </parent>
   <groupId>org.xwiki.contrib</groupId>
-  <artifactId>application-weeklyactivity</artifactId>
-  <version>1.3-SNAPSHOT</version>
-  <name>Weekly Activity Application</name>
+  <artifactId>application-weekly-activity-application</artifactId>
+  <version>1.0</version>
   <packaging>xar</packaging>
-  <description>Manage your weekly work by logging your activities</description>
-  <scm>
-    <connection>scm:git:git://github.com/xwiki-contrib/application-weeklyactivity.git</connection>
-    <developerConnection>scm:git:git@github.com:xwiki-contrib/application-weeklyactivity.git</developerConnection>
-    <url>https://github.com/xwiki-contrib/application-weeklyactivity</url>
-    <tag>HEAD</tag>
-  </scm>
+  <name>XWiki Application - Weekly Activity Application</name>
+  <description>Weekly Activity Application</description>
   <developers>
-   <developer>
-     <id>42aroger</id>
-     <name>Antoine Roger</name>
-   </developer>
-   <developer>
-     <id>xwikiyann</id>
-     <name>Yann Flory</name>
-   </developer>
+    <developer>
+      <id>mouhb</id>
+      <name>mouhb</name>
+    </developer>
   </developers>
-  <properties>
-    <platform.version>${commons.version}</platform.version>
-    <!-- Don't run CLIRR here since there's no Java code. -->
-    <xwiki.clirr.skip>true</xwiki.clirr.skip>
-  </properties>
-  <dependencies>
-    <dependency>
-      <groupId>org.xwiki.platform</groupId>
-      <artifactId>xwiki-platform-rendering-macro-velocity</artifactId>
-      <version>${platform.version}</version>
-      <scope>runtime</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.xwiki.platform</groupId>
-      <artifactId>xwiki-platform-rendering-macro-include</artifactId>
-      <version>${platform.version}</version>
-      <scope>runtime</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.xwiki.rendering</groupId>
-      <artifactId>xwiki-rendering-macro-html</artifactId>
-      <version>${platform.version}</version>
-      <scope>runtime</scope>
-    </dependency>
-  </dependencies>
-  <build>
+ <build>
     <!-- Needed to add support for the XAR packaging -->
     <extensions>
       <extension>
@@ -92,6 +56,12 @@
       </plugin>
     </plugins>
   </build>
+  <scm>
+    <connection>scm:git:git://github.com/mouhb/application-weeklyactivity.git</connection>
+    <developerConnection>scm:git:git@github.com:mouhb/application-weeklyactivity.git</developerConnection>
+    <url>https://github.com/mouhb/application-weeklyactivity</url>
+    <tag>HEAD</tag>
+  </scm>
   <distributionManagement>
     <repository>
       <id>xwiki-staging</id>
